crates/frontend/samples/test12.out
error: duplicate field name
  ┌─ crates/frontend/samples/test12.fir:4:5
  │
4 │     foo: (),
  │     ^^^^^^^

note: name first used here
  ┌─ crates/frontend/samples/test12.fir:2:9
  │
2 │     pub foo: T,
  │         ^^^

error: enum fields are all implicitly public
  ┌─ crates/frontend/samples/test12.fir:8:11
  │
8 │     Foo { pub foo: (), foo: () },
  │           ^^^

error: duplicate field name
  ┌─ crates/frontend/samples/test12.fir:8:24
  │
8 │     Foo { pub foo: (), foo: () },
  │                        ^^^^^^^

note: name first used here
  ┌─ crates/frontend/samples/test12.fir:8:15
  │
8 │     Foo { pub foo: (), foo: () },
  │               ^^^

error: duplicate variant name
   ┌─ crates/frontend/samples/test12.fir:10:5
   │
10 │     Foo((), pub (), ()),
   │     ^^^^^^^^^^^^^^^^^^^

note: name first used here
  ┌─ crates/frontend/samples/test12.fir:8:5
  │
8 │     Foo { pub foo: (), foo: () },
  │     ^^^

error: enum fields are all implicitly public
   ┌─ crates/frontend/samples/test12.fir:10:13
   │
10 │     Foo((), pub (), ()),
   │
